📚 docs: Tabela adicionada.
E algumas pequenas correções no layout

--- a/PROJETO INTEGRADOR/SEMANA3/HTML PROJETO INTEGRADOR/index.html
+++ b/PROJETO INTEGRADOR/SEMANA3/HTML PROJETO INTEGRADOR/index.html
@@ -30,8 +30,42 @@
         <div class="button-interation">
             Clique aqui professor
         </div>
+        <h2> Conteúdos estudados</h2>
     </div>
 </main>
+<div class="container tabela">
+    <table>
+        <thead>
+          <tr>
+            <th>Linguagem/Tecnologia</th>
+            <th>Descrição</th>
+          </tr>
+        </thead>
+        <tbody>
+          <tr>
+            <td>HTML</td>
+            <td>Linguagem de marcação utilizada para estruturar conteúdo na web</td>
+          </tr>
+          <tr>
+            <td>CSS</td>
+            <td>Linguagem utilizada para estilizar a aparência do conteúdo na web</td>
+          </tr>
+          <tr>
+            <td>JavaScript</td>
+            <td>Linguagem de programação utilizada para criar interatividade em páginas web</td>
+          </tr>
+          <tr>
+            <td>Ideação de projeto</td>
+            <td>Processo de criação e desenvolvimento de ideias para um projeto</td>
+          </tr>
+          <tr>
+            <td>Scrum</td>
+            <td>Metodologia ágil utilizada para gerenciamento de projetos</td>
+          </tr>
+        </tbody>
+      </table>
+      
+</div>
 <footer>
     <div class="container footer">
         <div class="icons">
